linux-base (4.2) UNRELEASED; urgency=medium

  * Change source format to 3.0 (native) so that .git directory is excluded
    by default
  * Add manual page for linux-update-symlinks
  * read_kernelimg_conf(): Quietly ignore settings used only by kernel-package

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 05 Jun 2016 02:21:25 +0100

linux-base (4.1) unstable; urgency=medium

  * Adjust for migration to git:
    - Add .gitignore files
    - debian/control: Update Vcs-* fields (Closes: #824748)
  * Add image_stem() and read_kernelimg_conf() functions to Perl module
  * Add linux-update-symlinks command for use by package maintainer scripts

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 05 Jun 2016 02:13:38 +0100

linux-base (4.0) unstable; urgency=low

  * Remove obsolete postinst upgrade code and translations
    (Closes: #580435, #660670, #670775, #686211, #686384, #686431, #686445,
     #686459, #686480, #686602, #686610, #686662, #686687, #686704, #686705,
     #686717, #686720, #686748, #698203)
  * Run version_cmp() unit tests at build time
  * linux-version: Fix sorting of version strings containing -trunk
    (Closes: #761614)
  * perf: Update error message for missing perf executable, to refer to
    linux-perf-<version> for Linux 4.1 onward
  * debian/control: Drop support for pre-multiarch releases
  * debian/control: Update Vcs-* fields to use anonscm.debian.org
  * debian/control: Update policy version to 3.9.6; no changes required

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 04 Aug 2015 21:24:05 +0100

linux-base (3.5) unstable; urgency=low

  * debian/control: Set Multi-Arch: foreign to allow for installation
    of foreign linux-image packages

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 04 Mar 2012 15:21:57 +0000

linux-base (3.4) unstable; urgency=low

  * perf: Fix lookup of the real command and package names for official
    packages of Linux 3.1 onward and for custom kernels with stable
    updates
