@@ -4,6 +4,7 @@ linux-base (4.2) UNRELEASED; urgency=medium
     by default
   * Add manual page for linux-update-symlinks
   * read_kernelimg_conf(): Quietly ignore settings used only by kernel-package
+  * debian/rules: Add build-{arch,indep} targets
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 05 Jun 2016 02:21:25 +0100
 
